# gatepulse

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  mkdocs.yml  rebar.config
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-scala-sdk.yml
bridge/: Dockerfile  README.md  build.sbt  docker-compose.yml
c/: Makefile  PROTOCOL.md
c/fuzz/: fuzz_parser.c
c/src/: dlq.c  dlq.h  index.c  index.h  ipc.c  ipc.h  main.c  queue.c  queue.h  store.c  store.h
c/tests/: test_store.c
config/: sys.config  vm.args
contracts/: openapi.yaml
deploy/: docker-compose.yml
docs/: billing.md  embedded-mode.md  hookline.postman_collection.json  index.md  multi-tenancy.md  v2-roadmap.md  websocket.md  why-gatepulse.md  why-hookline.md
docs/production/: backup.md  checklist.md  ha-deployment.md  postgres-backend.md  readiness-gate.md  secrets-rotation.md  webhook-consumer-guide.md
docs/releases/: v1.1.md  v1.2.md  v1.3.md  v2.0.md  v2.1.md
docs/tutorials/: express-webhooks.md  fastapi-webhooks.md
helm/hookline/: Chart.yaml  (+1 more)
openapi/: openapi.yaml
personal/: DEMO.md  docker-compose.demo.yml
sdk/: README.md
sdk/python/: CHANGELOG.md  pyproject.toml
sdk/python/examples/: basic.py  verify_signature.py
sdk/python/gatepulse/: __init__.py  webhook.py
sdk/python/hookline/: __init__.py  admin.py  client.py  webhook.py  ws.py
test/: complex-scenarios.sh  e2e.sh  integration.sh  production-readiness.sh  ws.sh
(+197 files in other folders)
