[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hookline"
version = "0.2.0"
description = "HookLine Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/saidmashhud/hookline"
